--- a/app/views/products/read.phtml
+++ b/app/views/products/read.phtml
@@ -4,7 +4,16 @@
 
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-            <button type="button" class="btn btn-default navbar-btn navbar-right" onclick="window.location.href = '../login';">Sign in</button>
+            <?php
+            if(!empty($parameters['user']))
+            {
+                echo "<p class='navbar-right'>Hello ".$parameters['user']->name."</p>";
+            }
+            else
+            {
+                echo "<button type='button' class='btn btn-default navbar-btn navbar-right' onclick='window.location.href=\"../login\"'>Sign in</button>";
+            }
+            ?>
             </div>
         </nav>
 
