--- a/app/views/home.phtml
+++ b/app/views/home.phtml
@@ -3,7 +3,7 @@
 <div class="container">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
-        <button type="button" class="btn btn-default navbar-btn navbar-right" onclick="window.location.href = '../login';">Sign in</button>
+        <button type="button" class="btn btn-default navbar-btn navbar-right" onclick="window.location.href = 'log/login';">Sign in</button>
         </div>
     </nav>
     <div class="jumbotron">
