--- a/app/views/login.phtml
+++ b/app/views/login.phtml
@@ -12,7 +12,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Login</div>
                     <div class="panel-body">
-                    <form action="login/tryLogin" method="post">
+                    <form action="tryLogin" method="post">
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input type="text" class="form-control" name="name" id="name" value="">
