--- a/app/views/home.phtml
+++ b/app/views/home.phtml
@@ -1,16 +1,16 @@
 <?php include VIEWS.'header.phtml'; ?>
 <br>
 <div class="container">
-    <nav class="navbar navbar-default">
+    <!-- <nav class="navbar navbar-default">
         <div class="container-fluid">
         <button type="button" class="btn btn-default navbar-btn navbar-right" onclick="window.location.href = 'log/login';">Sign in</button>
         </div>
-    </nav>
+    </nav> -->
     <div class="jumbotron">
         <h1>Welcome!</h1>
         <p class="lead">This is a online shop made as a test for a job position at ABC Hosting</p>
 
-        <p><a class="btn btn-lg btn-success" href="products/read" role="button">Products List</a></p>
+        <p><a class="btn btn-lg btn-success" href="products/read" role="button">Start the experience!</a></p>
     </div>
 </div>
 <?php include VIEWS.'footer.phtml'; ?>
