--- a/app/views/products/read.phtml
+++ b/app/views/products/read.phtml
@@ -1,5 +1,5 @@
 <?php include VIEWS . 'header.phtml'; ?>
-    <script>history.pushState(null, '', '/online-shop_ABC/products/read');    </script>
+    <script>history.pushState(null, '', '<?php echo SITE_PATH; ?>/products/read');    </script>
     <br>
     <div class="container">
 
