--- a/app/views/footer.phtml
+++ b/app/views/footer.phtml
@@ -1,5 +1,4 @@
-
-    <script src="/online-shop_ABC/public/assets/jquery-1.12.4-dist/js/jquery.js"></script>
-    <script src="/online-shop_ABC/public/assets/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="/public/assets/jquery-1.12.4-dist/js/jquery.js"></script>
+    <script src="/public/assets/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
   </body>
 </html>
