--- a/app/views/shoppingCart/read.phtml
+++ b/app/views/shoppingCart/read.phtml
@@ -1,5 +1,5 @@
 <?php include VIEWS . 'header.phtml'; ?>
-<script>history.pushState(null, '', '/online-shop_ABC/shoppingCart/read');    </script>
+<script>history.pushState(null, '', '/shoppingCart/read');    </script>
 <br>
 <div class="container">
     <nav class="navbar navbar-default">
