Create users functionality

--- a/app/views/header.phtml
+++ b/app/views/header.phtml
@@ -8,6 +8,6 @@
     <meta name="author" content="Alejandro Lopez">
     <link rel="icon" href="favicon.ico" type="image/ico">
     <title>ABC Hosting Test</title>
-    <link href="/public/assets/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/online-shop-abc.zz.com.ve/public/assets/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
   </head>
   <body>
