--- a/app/views/footer.phtml
+++ b/app/views/footer.phtml
@@ -1,4 +1,4 @@
-    <script src="/public/assets/jquery-1.12.4-dist/js/jquery.js"></script>
-    <script src="/public/assets/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="/online-shop-abc.zz.com.ve/public/assets/jquery-1.12.4-dist/js/jquery.js"></script>
+    <script src="/online-shop-abc.zz.com.ve/public/assets/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
   </body>
 </html>
