--- a/app/views/products/read.phtml
+++ b/app/views/products/read.phtml
@@ -1,5 +1,5 @@
 <?php include VIEWS . 'header.phtml'; ?>
-<script>history.pushState(null, '', '/products/read');    </script>
+<!-- <script>history.pushState(null, '', '/products/read');    </script> -->
     <br>
     <div class="container">
 
@@ -11,6 +11,7 @@
     ?>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
+            <button type='button' class='btn btn-default navbar-btn navbar-left' onclick='window.location.href="../users/create"'><span class='glyphicon glyphicon-plus'></span> <span class='glyphicon glyphicon-user'></span></button>
             <?php
             if(!empty($_SESSION['loggedUser']))
             {
