--- a/app.old/views/shoppingCart/read.phtml
+++ b/app.old/views/shoppingCart/read.phtml
@@ -1,5 +1,5 @@
 <?php include VIEWS . 'header.phtml'; ?>
-<script>history.pushState(null, '', '/online-shop-abc.zz.com.ve/shoppingcart/read');    </script>
+<!-- <script>history.pushState(null, '', '/shoppingCart/read');    </script> -->
 <br>
 <div class="container">
     <nav class="navbar navbar-default">
